--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "clean": "rm -rf node_modules/.vite dist",
+    "dev": "react-router dev --port 5001",
     "start": "react-router-serve ./build/server/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -14,16 +17,24 @@
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
