--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.3",
